--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "check": "npm run tslint && nsp check",
+    "check": "npm run tslint",
     "clean": "rimraf ./lib \"npm-debug.log*\" ./docs ./.nyc_output",
     "doc": "echo \"implementing...\" && exit 0",
     "mocha": "mocha",
@@ -64,20 +64,19 @@
     "http-server": "^0.11.1",
     "mocha": "^5.2.0",
     "nock": "^9.6.1",
-    "nsp": "^3.2.1",
     "nyc": "^11.9.0",
     "open": "0.0.5",
     "power-assert": "^1.6.1",
     "rimraf": "^2.6.2",
     "sinon": "^4.5.0",
-    "snyk": "^1.113.0",
+    "snyk": "^1.117.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.2"
   },
   "dependencies": {
-    "@chevre/factory": "^1.0.0-alpha.49",
+    "@chevre/factory": "^1.0.0-alpha.50",
     "debug": "^3.2.6",
     "http-status": "^1.3.1",
     "isomorphic-fetch": "^2.2.1",
