--- a/package.json
+++ b/package.json
@@ -49,17 +49,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/debug": "0.0.30",
-    "@types/form-data": "^2.2.1",
+    "@types/form-data": "^2.5.0",
     "@types/http-status": "^0.2.30",
     "@types/isomorphic-fetch": "0.0.34",
-    "@types/mocha": "^5.2.6",
+    "@types/mocha": "^5.2.7",
     "@types/nock": "^9.3.1",
     "@types/open": "0.0.29",
     "@types/power-assert": "^1.5.0",
     "@types/qs": "^6.5.3",
-    "@types/request": "^2.48.1",
+    "@types/request": "^2.48.2",
     "@types/sinon": "^4.3.3",
-    "coveralls": "^3.0.3",
+    "coveralls": "^3.0.5",
     "http-server": "^0.11.1",
     "mocha": "^5.2.0",
     "nock": "^9.6.1",
@@ -69,12 +69,12 @@
     "rimraf": "^2.6.3",
     "sinon": "^4.5.0",
     "ts-node": "^7.0.1",
-    "tslint": "^5.15.0",
+    "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.4.3"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@chevre/factory": "1.0.0-alpha.100",
+    "@chevre/factory": "^1.0.0",
     "debug": "^3.2.6",
     "http-status": "^1.3.2",
     "isomorphic-fetch": "^2.2.1",
