--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@chevre/factory": "^3.0.1",
+    "@chevre/factory": "4.0.0-alpha.0",
     "debug": "^3.2.6",
     "http-status": "^1.3.2",
     "isomorphic-fetch": "^2.2.1",
