--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chevre/api-abstract-client",
-  "version": "3.7.0",
+  "version": "3.8.0-alpha.4",
   "description": "Chevre API Abstract Client Library for Javascript",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
