--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/power-assert": "^1.5.3",
     "@types/qs": "^6.9.3",
     "@types/request": "^2.48.5",
+    "@types/request-promise-native": "^1.0.17",
     "@types/sinon": "^4.3.3",
     "coveralls": "^3.1.0",
     "http-server": "^0.11.1",
@@ -75,7 +76,7 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "@chevre/factory": "^4.58.0",
+    "@chevre/factory": "^4.58.1",
     "debug": "^3.2.6",
     "http-status": "^1.4.2",
     "isomorphic-fetch": "^2.2.1",
